fix: primary image responsiveness on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,6 +75,14 @@ input, select, textarea {
 	width: auto !important;
 }
 
+@media screen and (max-width: 600px){
+ .custom_image{
+	width: 90% !important;
+	left: 50% !important;
+	top: 30% !important;
+ }
+}
+
 /* Basic */
 
 	@-ms-viewport {
